--- a/styles/style.css
+++ b/styles/style.css
@@ -9,11 +9,22 @@ body {
 
 h1 {
   color: slate;
+  margin-bottom: 15px;  
 }
 
 .movielistentry {
   background: #fff;
-  border: solid 3px black;
+  border: solid 1px black;
+  padding: 10px;
+  margin-bottom: -1px; 
 }
 
+.search {
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: right;
+}
 
+#notfound {
+  color: red;
+}
