--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,10 @@ h1 {
   text-decoration: none;
 }
 
-.details {
+.movie-detail {
+  font-size: 20px;
+  margin-bottom: 5px;
+  padding-left: 15px;
   text-decoration: none;
 }
 
