--- a/styles/style.css
+++ b/styles/style.css
@@ -42,6 +42,11 @@ h1 {
   text-decoration: none;
 }
 
+.movie-poster {
+  height: 300px;
+  width: 200px;
+}
+
 /******************************
 *********** NAV ***************
 ******************************/
